<resources>
    <string name="app_name">Experiment</string>
    <string name="action_settings">Settings</string>
    <string name="collegename">Oriental Institute of Science and Technology</string>
    <string name="saying1">Presents</string>
    <string name="TechAcme">TechAcme</string>
    <string name="saying2">Central India\'s Largest Science and Technology Festival</string>
    <string name="saying3">Brought To You by</string>
    <string name="title_activity_firstactivity">Firstactivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="logo">Logo</string>
    <string name="date">16-19 Oct 2015</string>
    <string name="title_activity_menu">Menu</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="aboutMe">About Me</string>
</resources>
