<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backg"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/lests">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/collegeLogo"
        android:layout_alignParentTop="true"
        android:src="@drawable/collegelogo"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/collegename"
        android:id="@+id/textView"
        android:textColor="#B40431"
        android:layout_below="@+id/collegeLogo"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:singleLine="false"
        android:gravity="center"
        android:fontFamily="serif"/>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="80dip"
        android:id="@+id/imageView2"
        android:src="@drawable/tcslogo"
        android:layout_marginTop="350dip"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/saying1"
        android:id="@+id/textView2"
        android:textColor="#B40431"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TechAcme"
        android:id="@+id/techAcme"
        android:textColor="#5957b4"
        android:layout_marginTop="200dip"
        android:layout_marginLeft="20dip"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:textSize="50dp"
        android:textStyle="italic|bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/saying3"
        android:id="@+id/brought"
        android:textColor="#B40431"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dip"
        android:fontFamily="serif"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/letsStart"
        android:src="@drawable/letsstart"
        android:visibility="visible"
        android:onClick="onButtonClick"
        android:adjustViewBounds="false"
        android:backgroundTint="@android:color/transparent"
        android:cropToPadding="false"
        android:background="@android:color/transparent"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date"
        android:id="@+id/textView3"
        android:layout_below="@+id/techAcme"
        android:layout_alignRight="@+id/techAcme"
        android:layout_alignEnd="@+id/techAcme"
        android:textColor="#5957b4"
        android:fontFamily="serif"
        android:textStyle="bold"/>

</RelativeLayout>
